# xenharmonic-voyager

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  app.py  justfile  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.claude/agents/: frontend-architect.md  music-theory-domain-expert.md  testing-specialist.md
.claude/commands/: commit-push.md  issue-new-feature.md  pr-create.md  pr-review-back.md  pr-review.md  refactor.md  test-create.md  test-fix.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
config/: __init__.py  constants.py  styles.py
docs/00.project/: 0001.requirements.md  0002.architecture-implementation.md  0002.screenDesignes.md
docs/10.domain/: 1001.mathematical-foundation.md
docs/20.development/: 2001.architecture-implementation.md
docs/30.quality/: 3001.testing.md  3002.git-pr.md
docs/70.knowledge/: 7001.mvp-calculation-engine-plan.md  7002.pre-commit-workflow.md  7003.serena-mcp-guide.md  7004.visualization-ideas.md  7005.ui-refactoring-presenter-view.md  7006.plotly-guide.md
docs/80.dailyReport/: template.md
src/: __init__.py  calculator.py
src/acoustics/: __init__.py  roughness.py
src/application/: __init__.py  dto.py  use_cases.py
src/constants/: __init__.py  ui.py
src/domain/: __init__.py  (+7 more)
tests/: __init__.py  test_calculator.py
ui/: __init__.py  analysis_view.py  dissonance_curve_view.py  help_sections.py  history_view.py  models.py  session_management.py  setup.py  sidebar.py  step_selector.py
(+25 files in other folders)
